--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,9 @@ Package: cpp11gaussjordan
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0003-1017-7574"))
+    person("Mauricio", "Vargas", role = c("aut","cre","cph"), 
+        email = "m.sepulveda@mail.utoronto.ca", 
+        comment = c(ORCID = "0000-0003-1017-7574"))
 Description: What the package does (one paragraph).
 License: Apache License (>= 2)
 Encoding: UTF-8
