--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: cpp11gaussjordan
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("Mauricio", "Vargas", role = c("aut","cre","cph"), 
+    person("Mauricio", "Vargas Sepulveda", role = c("aut","cre","cph"), 
         email = "m.sepulveda@mail.utoronto.ca", 
         comment = c(ORCID = "0000-0003-1017-7574"))
 Description: What the package does (one paragraph).
