--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: cpp11gaussjordan
-Title: What the Package Does (One Line, Title Case)
+Title: A naive implementation of the Gauss-Jordan algorithm
 Version: 0.0.0.9000
 Authors@R: 
     person("Mauricio", "Vargas Sepulveda", role = c("aut","cre","cph"), 
         email = "m.sepulveda@mail.utoronto.ca", 
         comment = c(ORCID = "0000-0003-1017-7574"))
-Description: What the package does (one paragraph).
+Description: Just to demonstrate some features of the cpp11 package.
 License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
