--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Authors@R:
         email = "m.sepulveda@mail.utoronto.ca", 
         comment = c(ORCID = "0000-0003-1017-7574"))
 Description: Just to demonstrate some features of the cpp11 package.
+URL: https://pacha.dev/blog/2023/05/23/cpp11-vendoring/
 License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
