--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     person("Mauricio", "Vargas Sepulveda", role = c("aut","cre","cph"), 
         email = "m.sepulveda@mail.utoronto.ca", 
         comment = c(ORCID = "0000-0003-1017-7574"))
-Description: Just to demonstrate some features of the cpp11 package.
+Description: Just to demonstrate the vendoring capabilities of the cpp11 package.
 URL: https://pacha.dev/blog/2023/05/23/cpp11-vendoring/
 License: Apache License (>= 2)
 Encoding: UTF-8
